# operators

./: CMakeLists.txt
include/: cell.h  constructor.h  rectangle.h  vector_op.h
src/: operators.cpp
